--- a/notebooks/workflows/noaa_ersst_variability/noaa_ersst_variability.ipynb
+++ b/notebooks/workflows/noaa_ersst_variability/noaa_ersst_variability.ipynb
@@ -423,9 +423,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:python-tutorial]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-python-tutorial-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -437,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.7"
   },
   "toc": {
    "base_numbering": 1,
@@ -451,6 +451,35 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
